/self request, deleting own user not working
